add media queries for contact page

--- a/css/main.css
+++ b/css/main.css
@@ -1308,6 +1308,21 @@ footer {
     -ms-grid-columns: (1fr)[1];
         grid-template-columns: repeat(1, 1fr);
   }
+  /* works page */
+  .our-works {
+    padding: 8rem 3rem;
+  }
+  /* contact page */
+  .contact-form {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+  }
+  .contact-form .contact-image {
+    display: none;
+  }
+  .contact-map-contain .map-overlay {
+    height: 26% !important;
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -1368,15 +1383,18 @@ footer {
   .featured-work {
     padding: 0 3rem !important;
   }
-  .footer-container {
+  footer {
+    padding: 5rem 3rem 5rem 3rem;
+  }
+  footer .footer-container {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
   }
-  .footer-container .footer-pages {
+  footer .footer-container .footer-pages {
     margin: 0;
     padding-top: 4.5rem;
   }
-  .footer-container .footer-contact-info span {
+  footer .footer-container .footer-contact-info span {
     margin-left: 0;
   }
   /* about page */
@@ -1416,6 +1434,42 @@ footer {
   }
   #pricing {
     padding: 10rem 3rem 12rem 3rem;
+  }
+  /* works page */
+  .work-container {
+    padding: 0 3rem;
+  }
+  .our-works {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+  }
+  /* contact page */
+  .contact-container {
+    padding: 0 3rem;
+  }
+  .contact-form {
+    padding: 8rem 3rem;
+  }
+  .contact-form .contact-info {
+    -webkit-transform: none;
+            transform: none;
+    padding: 0;
+  }
+  .contact-form .contact-info form {
+    -webkit-transform: none;
+            transform: none;
+  }
+  .contact-map {
+    padding: 0 2rem 0 2rem;
+  }
+  .contact-map .main-heading {
+    font-size: 3rem;
+  }
+  .contact-map .contact-map-contain {
+    height: 70%;
+  }
+  .contact-map .contact-map-contain .map-overlay {
+    height: 20%;
   }
 }
 
@@ -1483,6 +1537,24 @@ footer {
     font-size: 3rem;
     margin-top: 1rem;
   }
+  /* works page */
+  .work-container {
+    padding: 0 1.5rem;
+  }
+  .work-container .page-heading {
+    font-size: 3rem;
+    margin-top: 1rem;
+  }
+  .our-works {
+    padding: 5rem 1.5rem;
+  }
+  /* contact page */
+  .contact-container {
+    padding: 0 1.5rem;
+  }
+  .contact-container .page-heading {
+    font-size: 3rem;
+  }
 }
 
 @media screen and (min-width: 768px) and (min-height: 1024px) {
@@ -1533,6 +1605,25 @@ footer {
     font-size: 3rem;
     margin-top: 2rem;
   }
+  /* works page */
+  .work-header {
+    height: 100vh;
+  }
+  .work-header .page-heading {
+    font-size: 3rem;
+    margin-top: 2rem;
+  }
+  /* contact page */
+  .contact-header {
+    height: 100vh;
+  }
+  .contact-header .page-heading {
+    font-size: 3rem;
+    margin-top: 2rem;
+  }
+  .contact-map-contain .map-overlay {
+    height: 20%;
+  }
 }
 
 @media screen and (max-width: 568px) and (max-height: 320px) and (orientation: landscape) {
@@ -1556,6 +1647,10 @@ footer {
   }
   .about-section .about-content .about-content-inner {
     padding-top: 2.5rem !important;
+  }
+  /* contact page */
+  .contact-map-contain .map-overlay {
+    height: 26% !important;
   }
 }
 /*# sourceMappingURL=main.css.map */
