--- a/css/main.scss
+++ b/css/main.scss
@@ -1099,6 +1099,24 @@ footer {
             grid-template-columns: repeat(1, 1fr);
         }
     }
+    /* works page */ 
+    .our-works {
+        padding: 8rem 3rem; 
+    }
+    /* contact page */ 
+    .contact-form {
+        grid-template-columns: repeat(1, 1fr);
+
+        .contact-image {
+            display: none; 
+        }
+    }
+    .contact-map-contain {
+        
+        .map-overlay {
+            height: 26% !important; 
+        }
+    }
 
 }
 @media screen and (max-width: 600px) {
@@ -1166,16 +1184,20 @@ footer {
         padding: 0 3rem !important;
     }
     
-    .footer-container {
-        grid-template-columns: 1fr; 
+    footer {
+        padding: 5rem 3rem 5rem 3rem; 
 
-        .footer-pages {
-            margin: 0;
-            padding-top: 4.5rem; 
-        }
-
-        .footer-contact-info span {
-            margin-left: 0; 
+        .footer-container {
+            grid-template-columns: 1fr; 
+    
+            .footer-pages {
+                margin: 0;
+                padding-top: 4.5rem; 
+            }
+    
+            .footer-contact-info span {
+                margin-left: 0; 
+            }
         }
     }
 
@@ -1231,6 +1253,45 @@ footer {
     }
     #pricing {
         padding: 10rem 3rem 12rem 3rem; 
+    }
+    /* works page */ 
+    .work-container {
+        padding: 0 3rem; 
+    }
+
+    .our-works {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    /* contact page */ 
+    .contact-container {
+        padding: 0 3rem; 
+    }
+    .contact-form {
+        padding: 8rem 3rem; 
+
+        .contact-info {
+            transform: none; 
+            padding: 0; 
+
+            form {
+                transform: none; 
+            }
+        }
+    }
+    .contact-map {
+        padding: 0 2rem 0 2rem; 
+
+        .main-heading {
+            font-size: 3rem; 
+        }
+
+        .contact-map-contain {
+            height: 70%; 
+
+            .map-overlay {
+                height: 20%; 
+            }
+        }
     }
 
 }
@@ -1309,7 +1370,27 @@ footer {
             margin-top: 1rem; 
         }
     }
+    /* works page */ 
+    .work-container {
+        padding: 0 1.5rem; 
 
+        .page-heading {
+            font-size: 3rem; 
+            margin-top: 1rem; 
+        }
+    }
+
+    .our-works {
+        padding: 5rem 1.5rem; 
+    }
+    /* contact page */ 
+    .contact-container {
+        padding: 0 1.5rem; 
+
+        .page-heading {
+            font-size: 3rem; 
+        }
+    }
 }
 
 @media screen and (min-width: 768px) and (min-height: 1024px) {
@@ -1370,6 +1451,30 @@ footer {
             margin-top: 2rem; 
         }
     }
+    /* works page */ 
+    .work-header {
+        height: 100vh; 
+
+        .page-heading {
+            font-size: 3rem; 
+            margin-top: 2rem; 
+        }
+    }
+    /* contact page */
+    .contact-header {
+        height: 100vh; 
+
+        .page-heading {
+            font-size: 3rem; 
+            margin-top: 2rem; 
+        }
+    }
+    .contact-map-contain {
+
+        .map-overlay {
+            height: 20%; 
+        }
+    }
 
 }
 
@@ -1401,6 +1506,13 @@ footer {
             .about-content-inner {
                 padding-top: 2.5rem !important;
             }
+        }
+    }
+    /* contact page */ 
+    .contact-map-contain {
+        
+        .map-overlay {
+            height: 26% !important; 
         }
     }
 }
