--- a/css/main.scss
+++ b/css/main.scss
@@ -307,7 +307,7 @@ a {
     .about-background-one {
         width: 54%;
         height: 100%;
-        background-image: url(https://images.unsplash.com/photo-1528136486997-bc538ef130d7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80);
+        background-image: url(https://images.pexels.com/photos/976866/pexels-photo-976866.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
         background-repeat: no-repeat;
         background-size: cover;
         z-index: -2;
@@ -339,7 +339,7 @@ a {
     }
 
     .about-background-two {
-        background-image: url(https://images.unsplash.com/photo-1528136486997-bc538ef130d7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80);
+        background-image: url(https://images.pexels.com/photos/976866/pexels-photo-976866.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
         width: 4%;
         height: 100%;
     }
@@ -1112,7 +1112,7 @@ footer {
         }
     }
     .contact-map-contain {
-        
+
         .map-overlay {
             height: 26% !important; 
         }
