--- a/css/main.scss
+++ b/css/main.scss
@@ -241,6 +241,27 @@ a {
         text-decoration: none; 
         cursor: pointer; 
     }
+    .fancy-link {
+        position: relative; 
+    }
+    .fancy-link::after {
+        content: ''; 
+        position: absolute;
+        left: 0; 
+        bottom: -15%; 
+        width: 100%; 
+        height: 2px; 
+        background-color: $lightbeige-background;
+        transform: scaleX(0);
+        transform-origin: left; 
+        transition: transform 250ms ease-in; 
+    }
+    .fancy-link:hover::after {
+        transform: scaleX(1);
+    }
+    .fancy-link-scroll::after {
+        background-color: black; 
+    }
 }
 .video-background {
     object-fit: cover;
