--- a/css/main.scss
+++ b/css/main.scss
@@ -440,6 +440,8 @@ a {
 
         .walk-around-video {
             width: 100%; 
+            position: relative;
+            z-index: 3; 
         }
     }
 }
