Update images on contact page

--- a/css/main.scss
+++ b/css/main.scss
@@ -494,7 +494,7 @@ a {
 /* contact page */ 
 .contact-header {
     position: relative;
-    background-image: url(https://images.unsplash.com/photo-1528136486997-bc538ef130d7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80);
+    background-image: url(../assets/gallery/gallery-image-five.jpg);
     background-size: cover; 
     background-repeat: no-repeat;
     width: 100%; 
@@ -541,7 +541,7 @@ a {
     }
 
     .contact-image {
-        background: url('https://images.pexels.com/photos/719609/pexels-photo-719609.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
+        background: url('../assets/about-image-three.jpg');
         height: 90%;
         width: 100%;
         position: relative;
